--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" href = "./style.css">
 </head>
 <body id="gyatt">
-    <label id = "label1">Click on the icon for acessing the chatbox</label><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <label id = "label1">Click on the icon for accessing the chatbox</label><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <label id ="label2">------------------------------><label>
     <script>
         window.embeddedChatbotConfig = {
